# stockGPT

./: .env  .gitignore  1_home.py  README.md  app.py  pyproject.toml
